WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50573
AX: aria-invalid should be supported
https://bugs.webkit.org/show_bug.cgi?id=50573
Summary
AX: aria-invalid should be supported
chris fleizach
Reported
2010-12-06 09:54:08 PST
http://www.w3.org/WAI/PF/aria/20100616/states_and_properties#aria-invalid
Attachments
Patch
(13.44 KB, patch)
2010-12-13 15:27 PST
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-12-06 10:33:54 PST
looks like a notification will also need to be sent out to inform when invalid happens
chris fleizach
Comment 2
2010-12-13 12:26:13 PST
So what we'll need here is to return a new AXAttribute (AXInvalid) and send a notification (AXInvalidStatusChanged) when the status changes.
chris fleizach
Comment 3
2010-12-13 15:27:32 PST
Created
attachment 76454
[details]
Patch
WebKit Review Bot
Comment 4
2010-12-13 15:40:32 PST
Attachment 76454
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/6930123
chris fleizach
Comment 5
2010-12-13 16:16:47 PST
http://trac.webkit.org/changeset/73983
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug