AX: aria-invalid should be supported. https://bugs.webkit.org/show_bug.cgi?id=50573

Reviewed by Beth Dakin.

WebCore:

Test: platform/mac/accessibility/aria-invalid.html

* accessibility/AXObjectCache.h:
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::invalidStatus):
* accessibility/AccessibilityObject.h:
* accessibility/chromium/AXObjectCacheChromium.cpp
(WebCore::AXObjectCache::postPlatformNotification):
* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postPlatformNotification):
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper accessibilityAttributeNames]):
(-[AccessibilityObjectWrapper accessibilityAttributeValue:]):
* dom/Element.cpp:
(WebCore::Element::updateAfterAttributeChanged):
* html/HTMLAttributeNames.in:

LayoutTests:

* platform/mac/accessibility/aria-invalid-expected.txt: Added.
* platform/mac/accessibility/aria-invalid.html: Added.
* platform/mac/accessibility/radio-button-group-members-expected.txt:



Canonical link: https://commits.webkit.org/64332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73983 268f45cc-cd09-0410-ab3c-d52691b4dbfc