WebCore/accessibility/AccessibilityObject.cpp
@@ -836,6 +836,20 @@ const String& AccessibilityObject::actionVerb() const
         return noAction;
     }
 }
+
+const AtomicString& AccessibilityObject::invalidStatus() const
+{
+    DEFINE_STATIC_LOCAL(const AtomicString, invalidStatusFalse, ("false"));
+    
+    // aria-invalid can return false (default), grammer, spelling, or true.
+    const AtomicString& ariaInvalid = getAttribute(aria_invalidAttr);
+    
+    // If empty or not present, it should return false.
+    if (ariaInvalid.isEmpty())
+        return invalidStatusFalse;
+    
+    return ariaInvalid;
+}
  
 const AtomicString& AccessibilityObject::getAttribute(const QualifiedName& attribute) const
 {
